--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ DROPDOWN MENU
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .menu__list {
@@ -178,7 +179,7 @@ DROPDOWN MENU
 }
 
 .menu__link {
-  font-size: 40px;
+  font-size: 30px;
   color: #fff;
 }
 
@@ -596,10 +597,6 @@ ABOUT US
   transition: all 300ms ease;
 }
 
-.about-us__img--figure:hover {
-  transform: scale(1.1);
-}
-
 .about-us__img {
   width: 100%;
   border-radius: 20px;
@@ -655,13 +652,13 @@ PARTS
 
 .bg__pattern-effect {
   position: absolute;
-  bottom: 0;
+  bottom: -5px;
   left: 0;
   right: 0;
 }
 
 .bg__img {
-  max-width: 110%;
+  max-width: 100%;
   vertical-align: middle;
 }
 
@@ -741,16 +738,16 @@ BUILDS
 }
 
 @media (max-width: 928px) {
-  .nav__link {
-    display: none;
-  }
-
-  .btn__menu {
-    display: block;
-  }
-
   .value {
     width: 100%;
+  }
+
+  .value__subtitle {
+    width: 100%;
+  }
+
+  .value__para {
+    max-width: 666px;
   }
 
   .about-us__content--left {
@@ -763,24 +760,41 @@ BUILDS
   }
 
   .about-us__img--figure {
-    max-width: 100%;
-    margin: 0 0 0 auto;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
     transition: all 300ms ease;
   }
 
-  .bg__img {
-    max-width: 200%;
-    vertical-align: middle;
+  .about-us__content--right {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 790px) {
+  .nav__link {
+    display: none;
+  }
+
+  .btn__menu {
+    display: block;
+  }
+}
+
+@media (min-width: 928px) {
+  .menu--open .menu__backdrop {
+    display: none;
+    opacity: 0;
+    transform: translate(100%);
   }
 }
 
 @media (max-width: 559px) {
-  .bg__img {
-    max-width: 400%;
-    vertical-align: middle;
-  }
-
   .nav__logo--link {
     margin-left: 30px;
+  }
+
+  .bg__pattern-effect {
+    bottom: -8px;
   }
 }
