--- a/style.css
+++ b/style.css
@@ -743,6 +743,218 @@ BUILDS
   margin-top: 24px;
 }
 
+/* 
+
+TEAM LEADERS
+
+*/
+
+#team-leaders {
+  padding-top: 24px;
+  padding-bottom: 80px;
+  background-color: #f8f9fa;
+}
+
+.team-leaders__card--wrapper {
+  margin-top: 48px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.team-leaders__card {
+  padding: 0 24px;
+  width: calc(100% / 4);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  transition: all 300ms ease;
+  margin: 32px 0;
+}
+
+.team-leaders__card:hover {
+  transform: translateY(-20px);
+}
+
+.card__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fb3e3e;
+  width: calc(100%);
+  margin: 0 auto;
+  box-shadow: 0 0 1.25rem rgba(108, 118, 134, 0.1) !important;
+  line-height: 68px;
+  margin-bottom: 15px;
+  transition: all 300ms ease;
+}
+
+/* 
+
+CONTACT
+
+*/
+
+#contact {
+  padding: 80px 0;
+}
+
+.contact__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact__form {
+  padding-top: 24px;
+  margin-top: 24px;
+  width: 100%;
+  max-width: 626px;
+  margin: 0 auto;
+}
+
+.contact__personal--info {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.contact__input {
+  padding: 6px 18px;
+  margin-top: 8px;
+}
+
+.contact__form--name {
+  margin-right: 12px;
+}
+.contact__form--email {
+  margin-left: 12px;
+}
+
+.contact__form--subject {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.contact__form--message {
+  width: 100%;
+}
+
+.contact__btn--wrapper {
+  display: flex;
+  justify-content: end;
+  position: relative;
+}
+
+.contact__btn {
+  margin-top: 12px;
+}
+
+.modal__overlay--loading {
+  color: #fff;
+  font-size: 32px;
+  display: none;
+  position: absolute;
+  top: 15px;
+  right: 50px;
+}
+
+.modal__overlay--success {
+  font-size: 16px;
+  font-weight: 700;
+  color: #6ecb63;
+  display: none;
+  text-align: center;
+  padding: 2px;
+}
+
+.modal__overlay--visible {
+  z-index: 1;
+  display: flex;
+}
+
+.contact__btn--text--visible {
+  visibility: hidden;
+}
+
+.fa-spinner {
+  animation: spinner 750ms infinite linear;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* 
+
+FOOTER
+
+*/
+
+footer {
+  padding: 6% 0;
+  background-color: #272a33;
+  position: relative;
+  display: flex;
+}
+
+.footer__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__logo--img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  box-shadow: 0 0 1.25rem rgba(108, 118, 134, 0.1) !important;
+  line-height: 68px;
+  margin-bottom: 15px;
+  transition: all 300ms ease;
+}
+
+.footer__social--list {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: center;
+  margin: 28px 0;
+}
+
+.footer__social--link,
+.footer__copyright {
+  color: #fff;
+  margin-right: 12px;
+}
+
+.footer__anchor {
+  position: relative;
+}
+
+.footer__logo--popper {
+  position: absolute;
+  right: 0;
+  top: 16px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all 300ms ease;
+  color: #fff;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+  transform: translateX(60px);
+  opacity: 1;
+}
+
 @media (max-width: 928px) {
   .value {
     width: 100%;
@@ -752,6 +964,12 @@ BUILDS
     width: 100%;
     max-width: 500px;
     margin: 0 auto;
+  }
+
+  .team-leaders__card {
+    width: 100%;
+    max-width: 500px;
+    margin: 24px auto;
   }
 
   .value__subtitle {
@@ -780,6 +998,20 @@ BUILDS
 
   .about-us__content--right {
     margin: 0 auto;
+  }
+
+  .contact__personal--info {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact__form--name {
+    margin-right: 0;
+  }
+
+  .contact__form--email {
+    margin-left: 0;
+    margin-top: 15px;
   }
 }
 
