--- a/style.css
+++ b/style.css
@@ -898,7 +898,7 @@ FOOTER
 */
 
 footer {
-  padding: 6% 0;
+  padding: 50px 0;
   background-color: #272a33;
   position: relative;
   display: flex;
