--- a/style.css
+++ b/style.css
@@ -305,15 +305,19 @@ header {
   visibility: hidden;
 }
 
-#play__video {
+.video__wrapper {
   width: 100%;
   max-width: 600px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#play__video {
+  width: 100%;
   height: 350px;
   padding: 0 12px;
-  position: absolute;
-  top: -100px;
-  left: 50%;
-  transform: translateX(-50%);
   animation: fade 600ms;
 }
 
