--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ button {
   color: #fb3e3e;
 }
 
+.no--cursor {
+  cursor: not-allowed !important;
+}
+
 .click {
   cursor: pointer;
   transition: all 300ms ease;
